--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -39,11 +39,13 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="ExpressionParser.cs" />
-        <Compile Include="ExpressionInPostfix.cs" />
+        <Compile Include="Calculator.cs" />
+        <Compile Include="CalculatorFromPostfix\PostfixCalculator.cs" />
+        <Compile Include="ConverterInPostfix\ExpressionInPostfix.cs" />
+        <Compile Include="ConverterInPostfix\ExpressionParser.cs" />
+        <Compile Include="ConverterInPostfix\UnaryMinusFinder.cs" />
         <Compile Include="MathOperators.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="UnaryMinusFinder.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
